# fbg

./: .gitignore  .gitmodules  2D_Graphics_Lib.hpp  CMakeLists.txt  README.md  V2d.hpp  V2dTests.cpp  a.cpp  a.out  absoluteAngleTest.cpp  alphaSketch.cpp  boid.hpp  bouncyBallsSketch.cpp  cmake-build.sh  cmake-configure.sh  compile.sh  compileandrun.sh  devcompile.sh  fbg.hpp  fbg.pc.in  fbgTesting.cpp  main.cpp  precompile.sh  rm_precompiled.sh  run.sh  testSketch.cpp
BmpParser/: bmp.cpp  sample.txt
Graphics_Lib/: LoopWindow.hpp  SDL_Handler.cpp  SDL_Handler.hpp  V2d.hpp  Window.cpp  Window.hpp  alphacomposit.cpp  alphacomposit.hpp  alphacomposite.cpp  alphacomposite.hpp  bitsandbytes.hpp  bitsandbytes.hpp.gch  frame.cpp  frame.hpp  maths.hpp  multithr_alphacomposite.hpp  pixelgrid.hpp  rgba.cpp  rgba.hpp  rgba_print.cpp  shapes.hpp
Graphics_Lib/Shapes/: bresenham_line.cpp  circle.cpp  circle.hpp  context.cpp  context.hpp  image.cpp  image.hpp  line.cpp  line.hpp  point.hpp  polyline.cpp  polyline.hpp  rect.cpp  rect.hpp  shape.cpp  shape.hpp  shape_algorithms.cpp  shape_algorithms.hpp  triangle.cpp  triangle.hpp
Graphics_Lib/Shapes/BMP/: bmp.cpp  bmp.hpp
Graphics_Lib/Shapes/drawing_algorithms/: bresenham.cpp  bresenham.hpp  circle.cpp  circle.hpp  drawcircle.cpp  drawcircle.hpp  drawline.cpp  drawline.hpp  drawpixel.cpp  drawpixel.hpp  drawpolyline.cpp  drawpolyline.hpp  drawrect.cpp  drawrect.hpp  line.cpp  line.hpp  pixel.cpp  pixel.hpp  rect.cpp  rect.hpp
Graphics_Lib/old/: alphacomposit.cpp  alphacomposit.hpp  multithr_alphacomposite.cpp
buildscripts/: cmake-build.sh  cmake-configure.sh
demos/: AeroplaneSketch.cpp  absoluteAngleTest.cpp  alphaSketch.cpp  bouncyBallsSketch.cpp  circle.cpp  rotatingTestSketch.cpp  testSketch.cpp  timesTableSketch.cpp  transparencySketch.cpp  vectorField.cpp  vectorFieldSketch.cpp  vectorgrid.cpp
demos/boid/: bmain.cpp
demos/boids/: bmain.cpp  boid.hpp  rotatingTestSketch.cpp
demos/boidsSketch/: bmain.cpp  boid.hpp
dev_log/: 2022-03-02 14-09-51.mkv
include/: LoopWindow.hpp  SDL_Handler.hpp  V2d.hpp  Window.hpp  alphacomposite.hpp  bitsandbytes.hpp  fbg.hpp  frame.cpp  frame.hpp  key.hpp  maths.hpp  rgba.hpp  shapes.hpp
include/Shapes/: circle.cpp  circle.hpp  context.hpp  image.cpp  image.hpp  line.cpp  line.hpp  point.hpp  polyline.hpp  rect.cpp  rect.hpp  shape.hpp  triangle.cpp  triangle.hpp
include/Shapes/BMP/: bmp.cpp  bmp.hpp
include/Shapes/drawing_algorithms/: bresenham.hpp  drawcircle.hpp  drawline.hpp  drawpixel.hpp  drawrect.hpp
old_build_scripts/: devcompile.sh
old_scripts/: precompile.sh
src/: SDL_Handler.cpp  alphacomposite.cpp  rgba.cpp
src/Shapes/: circle.cpp  image.cpp  line.cpp  polyline.cpp  rect.cpp  shape.cpp  triangle.cpp
src/Shapes/BMP/: bmp.cpp
src/Shapes/drawing_algorithms/: bresenham.cpp  drawcircle.cpp  drawline.cpp  drawpixel.cpp  drawpolyline.cpp  drawrect.cpp
tests/: graphicsUnitTests.cpp
